# snvstory

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: docker.yml
igm_churchill_ancestry/: cli.py
