[project]
name = "snvstory"
version = "1.0.1"
description = "Rapid and accurate ancestry inference using SNVs."
readme = "README.md"
requires-python = "~=3.9"
dependencies = [
    "awscli>=1.20.49",
    "bokeh>=2.4.3",
    "boto3>=1.18.49",
    "botocore>=1.21.49",
    "matplotlib>=3.2.1",
    "numpy>=1.18.1, <2",
    "pandas>=1.0.1",
    "scikit-learn>=0.24.1",
    "scipy>=1.4.1",
    "umap-learn>=0.4.2",
    "xgboost>=1.0.2",
]
